; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/sqlite3/extr_sqlite3.c_sqlite3SetHasNullFlag.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/sqlite3/extr_sqlite3.c_sqlite3SetHasNullFlag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OP_Integer = common dso_local global i32 0, align 4
@OP_Rewind = common dso_local global i32 0, align 4
@OP_Column = common dso_local global i32 0, align 4
@OPFLAG_TYPEOFARG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"first_entry_in(%d)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32)* @sqlite3SetHasNullFlag to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sqlite3SetHasNullFlag(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = load i32, i32* @OP_Integer, align 4
  %10 = load i32, i32* %6, align 4
  %11 = call i32 @sqlite3VdbeAddOp2(i32* %8, i32 %9, i32 0, i32 %10)
  %12 = load i32*, i32** %4, align 8
  %13 = load i32, i32* @OP_Rewind, align 4
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @sqlite3VdbeAddOp1(i32* %12, i32 %13, i32 %14)
  store i32 %15, i32* %7, align 4
  %16 = load i32*, i32** %4, align 8
  %17 = call i32 @VdbeCoverage(i32* %16)
  %18 = load i32*, i32** %4, align 8
  %19 = load i32, i32* @OP_Column, align 4
  %20 = load i32, i32* %5, align 4
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @sqlite3VdbeAddOp3(i32* %18, i32 %19, i32 %20, i32 0, i32 %21)
  %23 = load i32*, i32** %4, align 8
  %24 = load i32, i32* @OPFLAG_TYPEOFARG, align 4
  %25 = call i32 @sqlite3VdbeChangeP5(i32* %23, i32 %24)
  %26 = load i32*, i32** %4, align 8
  %27 = load i32, i32* %5, align 4
  %28 = sext i32 %27 to i64
  %29 = inttoptr i64 %28 to i32*
  %30 = call i32 @VdbeComment(i32* %29)
  %31 = load i32*, i32** %4, align 8
  %32 = load i32, i32* %7, align 4
  %33 = call i32 @sqlite3VdbeJumpHere(i32* %31, i32 %32)
  ret void
}

declare dso_local i32 @sqlite3VdbeAddOp2(i32*, i32, i32, i32) #1

declare dso_local i32 @sqlite3VdbeAddOp1(i32*, i32, i32) #1

declare dso_local i32 @VdbeCoverage(i32*) #1

declare dso_local i32 @sqlite3VdbeAddOp3(i32*, i32, i32, i32, i32) #1

declare dso_local i32 @sqlite3VdbeChangeP5(i32*, i32) #1

declare dso_local i32 @VdbeComment(i32*) #1

declare dso_local i32 @sqlite3VdbeJumpHere(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
